adding pong game and updating README

--- a/pong/game.html
+++ b/pong/game.html
@@ -4,22 +4,44 @@
 var canvas;
 var canvasContext;
 var ballX = 50;
+var ballSpeedX = 5;
 
 window.onload = function() {
   canvas = document.getElementById('gameCanvas');
   canvasContext = canvas.getContext('2d');
   
-  setInterval(drawEverything, 1000);
+  var framesPerSecond = 60;
+  setInterval(function() { 
+    moveEverything();
+    drawEverything();
+  }, 1000/framesPerSecond);
 }
 
+function moveEverything() {
+  ballX += ballSpeedX;
+  if (ballX > canvas.width) {
+      ballSpeedX = -ballSpeedX;
+  } 
+  if (ballX < 0) {
+      ballSpeedX = -ballSpeedX;
+  }
+}
 function drawEverything() {
-  ballX += 20;
   // fill background
-  canvasContext.fillStyle = 'black';
-  canvasContext.fillRect(0, 0, canvas.width, canvas.height);
-  // draw red square
+  colorRect(0, 0, canvas.width, canvas.height, 'black');
+  // draw paddle
+  colorRect(0, 210, 10, 100, 'white');
+  // draw ball
   canvasContext.fillStyle = 'red';
-  canvasContext.fillRect(ballX, 200, 25, 25);
+  canvasContext.beginPath();
+  canvasContext.arc(ballX, 100, 10, 0, Math.PI * 2, true);
+  canvasContext.fill();
+
+}
+
+function colorRect(leftX, topY, width, height, drawColor) {
+  canvasContext.fillStyle = drawColor;
+  canvasContext.fillRect(leftX, topY, width, height);
 }
 </script>
 </html>
