--- a/pong/game.html
+++ b/pong/game.html
@@ -4,7 +4,9 @@
 var canvas;
 var canvasContext;
 var ballX = 50;
-var ballSpeedX = 5;
+var ballY = 50;
+var ballSpeedX = 10;
+var ballSpeedY = 4;
 
 window.onload = function() {
   canvas = document.getElementById('gameCanvas');
@@ -19,11 +21,18 @@ window.onload = function() {
 
 function moveEverything() {
   ballX += ballSpeedX;
+  ballY += ballSpeedY;
   if (ballX > canvas.width) {
       ballSpeedX = -ballSpeedX;
   } 
   if (ballX < 0) {
       ballSpeedX = -ballSpeedX;
+  }
+  if (ballY > canvas.height) {
+      ballSpeedY = -ballSpeedY;
+  } 
+  if (ballY < 0) {
+      ballSpeedY = -ballSpeedY;
   }
 }
 function drawEverything() {
@@ -32,11 +41,15 @@ function drawEverything() {
   // draw paddle
   colorRect(0, 210, 10, 100, 'white');
   // draw ball
-  canvasContext.fillStyle = 'red';
-  canvasContext.beginPath();
-  canvasContext.arc(ballX, 100, 10, 0, Math.PI * 2, true);
-  canvasContext.fill();
+  colorCircle(ballX, ballY, 10, 'white');
 
+}
+
+function colorCircle(centerX, centerY, radius, drawColor) {
+  canvasContext.fillStyle = drawColor;
+  canvasContext.beginPath();
+  canvasContext.arc(centerX, centerY, radius, 0, Math.PI * 2, true);
+  canvasContext.fill();
 }
 
 function colorRect(leftX, topY, width, height, drawColor) {
