add paddle movement

--- a/pong/game.html
+++ b/pong/game.html
@@ -8,6 +8,20 @@ var ballY = 50;
 var ballSpeedX = 10;
 var ballSpeedY = 4;
 
+var paddle1Y = 250;
+const PADDLE_HEIGHT = 100;
+
+function calculateMousePos(event) {
+  var rect = canvas.getBoundingClientRect();
+  var root = document.documentElement;
+  var mouseX = event.clientX - rect.left - root.scrollLeft;
+  var mouseY = event.clientY - rect.top - root.scrollTop;
+  return {
+    x:mouseX,
+    y:mouseY
+  }  
+}
+
 window.onload = function() {
   canvas = document.getElementById('gameCanvas');
   canvasContext = canvas.getContext('2d');
@@ -17,6 +31,12 @@ window.onload = function() {
     moveEverything();
     drawEverything();
   }, 1000/framesPerSecond);
+
+  canvas.addEventListener('mousemove', function(evenet) {
+    var mousePos = calculateMousePos(event);
+    paddle1Y = mousePos.y;
+
+  });
 }
 
 function moveEverything() {
@@ -39,7 +59,7 @@ function drawEverything() {
   // fill background
   colorRect(0, 0, canvas.width, canvas.height, 'black');
   // draw paddle
-  colorRect(0, 210, 10, 100, 'white');
+  colorRect(0, paddle1Y, 10, 100, 'white');
   // draw ball
   colorCircle(ballX, ballY, 10, 'white');
 
