--- a/pong/game.html
+++ b/pong/game.html
@@ -39,6 +39,11 @@ window.onload = function() {
   });
 }
 
+function ballReset() {
+  ballX = canvas.width/2;
+  ballY = canvas.height/2;
+}
+
 function moveEverything() {
   ballX += ballSpeedX;
   ballY += ballSpeedY;
