refactor paddle width as a constant and add collision detection for paddle 2

--- a/pong/game.html
+++ b/pong/game.html
@@ -11,6 +11,7 @@ var ballSpeedY = 4;
 var paddle1Y = 250;
 var paddle2Y = 250;
 const PADDLE_HEIGHT = 100;
+const PADDLE_THICKNESS = 10;
 
 function calculateMousePos(event) {
   var rect = canvas.getBoundingClientRect();
@@ -50,7 +51,12 @@ function moveEverything() {
   ballX += ballSpeedX;
   ballY += ballSpeedY;
   if (ballX > canvas.width) {
-    ballSpeedX = -ballSpeedX;
+    if (ballY > paddle2Y &&
+      ballY < paddle2Y + PADDLE_HEIGHT) {
+        ballSpeedX = -ballSpeedX;
+      } else {
+        ballReset();
+    }
   } 
   if (ballX < 0) {
     if (ballY > paddle1Y &&
@@ -58,7 +64,7 @@ function moveEverything() {
         ballSpeedX = -ballSpeedX;
       } else {
         ballReset();
-      }
+    }
   }
   if (ballY > canvas.height) {
     ballSpeedY = -ballSpeedY;
@@ -71,9 +77,9 @@ function drawEverything() {
   // fill background
   colorRect(0, 0, canvas.width, canvas.height, 'black');
   // draw left paddle
-  colorRect(0, paddle1Y, 10, 100, 'white');
+  colorRect(0, paddle1Y, PADDLE_THICKNESS, 100, 'white');
   // draw right paddle
-  colorRect(canvas.width-10, paddle2Y, 10, 100, 'white');
+  colorRect(canvas.width-PADDLE_THICKNESS, paddle2Y, PADDLE_THICKNESS, 100, 'white');
   // draw ball
   colorCircle(ballX, ballY, 10, 'white');
 
