--- a/pong/game.html
+++ b/pong/game.html
@@ -8,6 +8,9 @@ var ballY = 50;
 var ballSpeedX = 10;
 var ballSpeedY = 4;
 
+var player1Score = 0;
+var player2Score = 0;
+
 var paddle1Y = 250;
 var paddle2Y = 250;
 const PADDLE_HEIGHT = 100;
@@ -47,7 +50,18 @@ function ballReset() {
   ballY = canvas.height/2;
 }
 
-function moveEverything() {
+function computerMovement() {
+  var paddle2YCenter = paddle2Y + (PADDLE_HEIGHT/2);
+  if (paddle2YCenter < ballY - 35) {
+    paddle2Y = paddle2Y + 6;
+  } else if (paddle2YCenter > ballY + 35) {
+    paddle2Y = paddle2Y - 6;
+  }
+}
+
+function moveEverything() { 
+  computerMovement();
+
   ballX += ballSpeedX;
   ballY += ballSpeedY;
   if (ballX > canvas.width) {
@@ -56,6 +70,7 @@ function moveEverything() {
         ballSpeedX = -ballSpeedX;
       } else {
         ballReset();
+        player1Score++;
     }
   } 
   if (ballX < 0) {
@@ -64,6 +79,7 @@ function moveEverything() {
         ballSpeedX = -ballSpeedX;
       } else {
         ballReset();
+        player2Score++;
     }
   }
   if (ballY > canvas.height) {
@@ -82,6 +98,9 @@ function drawEverything() {
   colorRect(canvas.width-PADDLE_THICKNESS, paddle2Y, PADDLE_THICKNESS, 100, 'white');
   // draw ball
   colorCircle(ballX, ballY, 10, 'white');
+  // score
+  canvasContext.fillText(player1Score, 100, 100);
+  canvasContext.fillText(player2Score, canvas.width-100, 100);
 
 }
 
