add feature where the ball speed is increased when hit w/ edge of paddle

--- a/pong/game.html
+++ b/pong/game.html
@@ -68,6 +68,9 @@ function moveEverything() {
     if (ballY > paddle2Y &&
       ballY < paddle2Y + PADDLE_HEIGHT) {
         ballSpeedX = -ballSpeedX;
+        // how far above/below the center of the paddle
+        var deltaY = ballY - (paddle2Y + PADDLE_HEIGHT/2);
+        ballSpeedY = deltaY * 0.35;
       } else {
         ballReset();
         player1Score++;
@@ -77,6 +80,9 @@ function moveEverything() {
     if (ballY > paddle1Y &&
       ballY < paddle1Y + PADDLE_HEIGHT) {
         ballSpeedX = -ballSpeedX;
+        // how far above/below the center of the paddle
+        var deltaY = ballY - (paddle1Y + PADDLE_HEIGHT/2);
+        ballSpeedY = deltaY * 0.35;
       } else {
         ballReset();
         player2Score++;
